--- a/Twitter/app/src/main/res/layout/content_main.xml
+++ b/Twitter/app/src/main/res/layout/content_main.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/content_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
@@ -13,8 +14,49 @@
     tools:context="com.pranay.fabrictools.twitter.MainActivity"
     tools:showIn="@layout/activity_main">
 
-    <Button
+
+    <!--<Button
         android:layout_width="match_parent"
-        android:layout_margin="10dp"
+        style="@style/MyCommonButtonStyle"
+        android:id="@+id/btnSignInWithTwitter"
+        android:text="@string/str_sign_in_with_twitter"
+        android:layout_height="wrap_content" />-->
+    <com.twitter.sdk.android.core.identity.TwitterLoginButton
+        android:id="@+id/twitter_login_button"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content" />
-</RelativeLayout>
+
+
+    <Button
+        android:id="@+id/btnShowTweet"
+        style="@style/MyCommonButtonStyle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:text="@string/str_post_tweet" />
+    <Button
+        android:id="@+id/btnShowUserTimeLine"
+        style="@style/MyCommonButtonStyle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:text="@string/str_user_time_line" />
+    <LinearLayout
+        android:id="@+id/linerLayoutTweetContainer"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        android:orientation="vertical">
+
+    </LinearLayout>
+
+    <TextView
+        android:id="@+id/tvTwitterUserName"
+        style="@style/MyCommonTextViewStyle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:gravity="center"
+        android:visibility="gone"
+        tools:text="this is test text" />
+</LinearLayout>
